--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -255,8 +255,8 @@ header {
     .movie-poster {
         position: relative;
         left: auto;
-        top: 5%;
-        transform: translateY(-5%);
+        top: 85%%;
+        transform: translateY(-85%);
         margin-bottom: 20px;
         width: 180px; /* Adjust poster width */
         height: 270px; /* Adjust poster height to maintain aspect ratio */
@@ -266,7 +266,7 @@ header {
         position: relative;
         left: auto;
         right: auto;
-        top: auto;
+        top: 2%;
         transform: none;
         width: 100%;
         text-align: center;
