--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -258,16 +258,16 @@ header {
         top: 85%%;
         transform: translateY(-85%);
         margin-bottom: 20px;
-        width: 250px; /* Adjust poster width */
-        height: 400px; /* Adjust poster height to maintain aspect ratio */
+        width: 280px; /* Adjust poster width */
+        height: 460px; /* Adjust poster height to maintain aspect ratio */
     }
 
     .movie-details-content {
         position: relative;
         left: auto;
         right: auto;
-        top: 2%;
-        transform: none;
+        top: 5%;
+        transform: translateY(-5%);
         width: 100%;
         text-align: center;
         padding: 0 20px;
