--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -264,10 +264,11 @@ header {
 
     .movie-details-content {
         position: relative;
+        margin-top: 0; /* Remove any top margin */
         left: auto;
         right: auto;
-        top: 5%;
-        transform: translateY(-5%);
+        top: none;
+        transform: none;
         width: 100%;
         text-align: center;
         padding: 0 20px;
